<resources>
    <string name="app_name">AutofillTestApp</string>
    <string name="tab_shipping">Shipping Address</string>
    <string name="tab_billing">Billing Address</string>
    <string name="person_name">Name</string>
    <string name="street_address">Address</string>
    <string name="locality">City</string>
    <string name="region">State</string>
    <string name="postal_code">ZIP Code</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>